Minor footer alignment fix

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,7 +5,6 @@
   color: $gray-bright;
   font-size: $h5-font-size;
   padding: $spacing-large;
-  text-align: right;
 }
 
 .Footer__Link {
